deploy/local/deployment-method-1.yaml
# Using Apache as Web Server
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hapless-horn-web
  labels:
    app: hapless-horn-web
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: hapless-horn-web
  template:
    metadata:
      labels:
        pod: hapless-horn-web
    spec:
      containers:
        - name: hapless-horn-web
          image: hapless-horn:php-apache-v5
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
            protocol: TCP
          resources:
            limits:
              cpu: 300m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 300Mi
