deploy/local/host-service.yaml
kind: "Service"
apiVersion: "v1"
metadata:
  name: "mysql"
spec:
  ports:
    -
      name: "mysql"
      protocol: "TCP"
      port: 3306
      targetPort: 3306
      nodePort: 0

---

kind: "Endpoints"
apiVersion: "v1"
metadata:
  name: "mysql"
subsets:
  -
    addresses:
      -
        ip: "192.168.64.1"
    ports:
      -
        port: 3306
        name: "mysql"

---

kind: "Service"
apiVersion: "v1"
metadata:
  name: "redis"
spec:
  ports:
    -
      name: "redis"
      protocol: "TCP"
      port: 6379
      targetPort: 6379
      nodePort: 0

---

kind: "Endpoints"
apiVersion: "v1"
metadata:
  name: "redis"
subsets:
  -
    addresses:
      -
        ip: "192.168.64.1"
    ports:
      -
        port: 6379
        name: "redis"
