deploy/local/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hapless-horn-web
spec:
  ports:
  - name: tcp
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    pod: hapless-horn-web
  type: ClusterIP
