deploy/local/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hapless-horn-web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: hapless-horn.minikube
    http:
      paths:
        - backend:
            serviceName: hapless-horn-web
            servicePort: 80
          path: /
